2013-09-30  Richard Sandiford  <rsandifo@linux.vnet.ibm.com>

	* src/arch-s390.c (s390_prelink_conflict_rela): Fix handling of
	R_390_IRELATIVE.
	* src/arch-s390x.c (s390x_prelink_conflict_rela): Likewise.

2013-07-19  Marek Polacek  <polacek@redhat.com>

	* doc/prelink.8 (--usage): Document it. 
	(--layout-page-size=): Likewise.

2013-05-03  Jakub Jelinek  <jakub@redhat.com>

	* src/cache.c (prelink_save_cache_check): For ET_CACHE_DYN
	or ET_UNPRELINKABLE dependencies, call prelink_save_cache_check
	recursively.
	* testsuite/Makefile.am (TESTS): Add unprel1.sh.
	* testsuite/Makefile.in: Regenerated.
	* testsuite/unprel1.sh: New test.
	* testsuite/unprel1.c: New file.
	* testsuite/unprel1lib1.c: New file.
	* testsuite/unprel1lib2.c: New file.

	* src/prelink.h (R_390_IRELATIVE): Define if not defined.

2013-04-25  Jakub Jelinek  <jakub@redhat.com>

	* src/arch-s390.c (s390_adjust_rela, s390_prelink_rela,
	s390_apply_conflict_rela, s390_prelink_conflict_rela,
	s390_undo_prelink_rela): Handle R_390_IRELATIVE.
	* src/arch-s390x.c (s390x_adjust_rela, s390x_prelink_rela,
	s390x_apply_conflict_rela, s390x_prelink_conflict_rela,
	s390x_undo_prelink_rela, s390x_reloc_size): Likewise.

2013-04-18  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/reloc4.sh: Add libraries to link lines to make
	testsuite work both with --no-add-needed and with --add-needed,
	including latest ld.bfd.
	* testsuite/reloc5.sh: Likewise.
	* testsuite/reloc8.sh: Likewise.
	* testsuite/reloc9.sh: Likewise.

2013-04-17  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/ifunc.h (IFUNC_DECL): Fix up .size on ppc64.
	* testsuite/cxx1.sh: Add libraries to link lines to make
	testsuite work both with --no-add-needed and with --add-needed,
	including latest ld.bfd.
	* testsuite/cxx2.sh: Likewise.
	* testsuite/cxx3.sh: Likewise.
	* testsuite/deps1.sh: Likewise.
	* testsuite/deps2.sh: Likewise.
	* testsuite/ifunc1.sh: Likewise.
	* testsuite/ifunc2.sh: Likewise.
	* testsuite/ifunc3.sh: Likewise.